--- a/templates/aws-tap-entrypoint-new-vpc.template.yaml
+++ b/templates/aws-tap-entrypoint-new-vpc.template.yaml
@@ -36,6 +36,7 @@ Metadata:
         Parameters:
           - TAPVersion
           - TAPDomainName
+          - TAPClusterArch
       - Label:
           default: Sample app configuration
         Parameters:
@@ -110,6 +111,8 @@ Metadata:
         default: SSH port
       TAPDomainName:
         default: Domain name
+      TAPClusterArch:
+        default: EKS single or multi cluster
       EKSClusterName:
         default: EKS cluster name
       KubernetesVersion:
@@ -171,6 +174,14 @@ Parameters:
    Description: >-
       Private DNS domain name for accessing the TAP graphical user interface
       (GUI) and project URLs.
+  TAPClusterArch:
+    Type: String
+    Description: >-
+      TAP Cluster Architecture
+    AllowedValues:
+      - 'Multi'
+      - 'Single'
+    Default: 'Multi'
   NumberOfAZs:
     Type: String
     Description: >-
@@ -655,6 +666,7 @@ Resources:
         EKSClusterName: !Ref EKSClusterName
         KubernetesVersion: !Ref KubernetesVersion
         TAPDomainName: !Ref TAPDomainName
+        TAPClusterArch: !Ref TAPClusterArch
         TanzuNetUsername: !Ref TanzuNetUsername
         TanzuNetPassword: !Ref TanzuNetPassword
         TanzuNetApiToken: !Ref TanzuNetApiToken
