--- a/templates/aws-tap-entrypoint-existing-vpc.template.yaml
+++ b/templates/aws-tap-entrypoint-existing-vpc.template.yaml
@@ -2515,13 +2515,13 @@ Resources:
             if [[ "${ClusterArch}" == "multi" ]]
             then
               echo "Setup TAP Multiple Clusters..."
-              su - $user -c "$tap_dir/src/tap-main.sh -c prereqs ${EksClusterName}-view"
+              su - $user -c "$tap_dir/src/tap-main.sh -c prereqs view"
               su - $user -c "$tap_dir/src/tap-main.sh -c install view"
-              su - $user -c "$tap_dir/src/tap-main.sh -c prereqs ${EksClusterName}-run"
+              su - $user -c "$tap_dir/src/tap-main.sh -c prereqs run"
               su - $user -c "$tap_dir/src/tap-main.sh -c install run"
-              su - $user -c "$tap_dir/src/tap-main.sh -c prereqs ${EksClusterName}-build"
+              su - $user -c "$tap_dir/src/tap-main.sh -c prereqs build"
               su - $user -c "$tap_dir/src/tap-main.sh -c install build"
-              su - $user -c "$tap_dir/src/tap-main.sh -c prereqs ${EksClusterName}-iterate"
+              su - $user -c "$tap_dir/src/tap-main.sh -c prereqs iterate"
               su - $user -c "$tap_dir/src/tap-main.sh -c install iterate"
               su - $user -c "$tap_dir/src/tap-main.sh -c prepview view"
               su - $user -c "$tap_dir/src/tap-main.sh -c installwk iterate"
@@ -2533,7 +2533,7 @@ Resources:
               su - $user -c "$tap_dir/src/tap-main.sh -c runtests iterate"
             else
               echo "Setup TAP Single Cluster..."
-              su - $user -c "$tap_dir/src/tap-main.sh -c prereqs ${EksClusterName}"              
+              su - $user -c "$tap_dir/src/tap-main.sh -c prereqs single"
               su - $user -c "$tap_dir/src/tap-main.sh -c install single"
               su - $user -c "$tap_dir/src/tap-main.sh -c installwk single"
               echo "wait till the workload to go through the supply-chain (8mins)"
