Shell vars need to be "escaped"
See: https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/intrinsic-function-reference-sub.html#:~:text=To%20write%20a%20dollar%20sign%20and%20curly%20braces%20(%24%7B%7D)%20literally%2C%20add%20an%20exclamation%20point%20(!)%20after%20the%20open%20curly%20brace%2C%20such%20as%20%24%7B!Literal%7D.%20CloudFormation%20resolves%20this%20text%20as%20%24%7BLiteral%7D.

--- a/templates/aws-tap-entrypoint-existing-vpc.template.yaml
+++ b/templates/aws-tap-entrypoint-existing-vpc.template.yaml
@@ -2334,7 +2334,7 @@ Resources:
 
             cfnSignal() {
               local args=(
-                --exit-code "$1"
+                --exit-code "${!1}"
                 --stack "${AWS::StackName}"
                 --resource UbuntuBastion
                 --region "${AWS::Region}"
@@ -2344,7 +2344,7 @@ Resources:
                 args+=( --reason "[…] $(tail -n5 /var/log/cloud-init-output.log)" )
               }
 
-              /opt/aws/bin/cfn-signal "${args[@]}"
+              /opt/aws/bin/cfn-signal "${!args[@]}"
             }
             trap 'cfnSignal $?' ERR
 
