Workaround for source-controller issues
NOTE: this is just a workaround and should be removed as soon as
possible

The source-controller that ships with TAP 1.5.x (version 0.7.0) has a
bug with auth against ECR via IAM roles.
Therefore we need to roll back to a previous version. The version from
TAP 1.4.3 (version 0.6.3) seems to work.

So we:
- add the TAP 1.4.3 repo
   - relocate it, if that what the user has configured
- add an overlay to tap which pins the source-controller package to
  0.6.3

--- a/tap-setup-scripts/src/resources/tap-overlay.yaml
+++ b/tap-setup-scripts/src/resources/tap-overlay.yaml
@@ -1,3 +1,8 @@
+#@ load("@ytt:overlay", "overlay")
+
+#! ------------------------------------------------------------
+#! ------------------------------------------------------------
+#!
 #! For TAP 1.5.0 we see the following issue:
 #!
 #! ```
@@ -13,8 +18,8 @@
 #! ```
 #!
 #! This seems to be fixed in TAP 1.5.1, so we can remove that when we upgrade
-
-#@ load("@ytt:overlay", "overlay")
+#!
+#! TODO(horlh): Remove once we switch to TAP 1.5.1
 
 #@overlay/match by=overlay.subset({"kind":"PackageInstall","metadata":{"name":"api-portal"}}), expects="0+"
 ---
@@ -23,3 +28,22 @@ metadata:
   annotations:
     #@overlay/match missing_ok=True
     kapp.k14s.io/change-rule.contour: "upsert after upserting contour"
+
+
+#! ------------------------------------------------------------
+#! ------------------------------------------------------------
+#!
+#! For source-controller 0.7.0 there seems to be an issue with ECR auth, so we
+#! downgrade for now until we get a version of TAP 1.5.x that has a fixed version
+#! of the source-controller
+#!
+#! TODO(horlh): Remove once the source-controller 0.7.0 is fixed
+
+#@overlay/match by=overlay.subset({"kind":"PackageInstall","metadata":{"name":"source-controller"}})
+---
+spec:
+  packageRef:
+    refName: controller.source.apps.tanzu.vmware.com
+    versionSelection:
+      #! This is the version from TAP 1.4.3
+      constraints: 0.6.3
